# commit-fixer

./: .gitignore  Dockerfile  README.md  build.sh  commit_fixer.py  example.diff  install.sh  mypy.ini  publish.sh  pyproject.toml  pytest.ini  requirements.txt  runner.py
requirements/: dev-requirements.txt  production-requirements.txt
safa/: constants.py  runner.py  safa_config.py  tool_registrar.py
safa/api/: client_factory.py  constants.py  http_client.py  safa_client.py  safa_store.py
safa/config/: README.md  base_config.py  factory.py  llm_config.py  project_config.py  repo_config.py  safa_config.py  user_config.py
safa/data/: artifact.py  commits.py
safa/tools/: committer.py  configure.py  git_history.py  jobs.py  projects.py  push_to_safa.py  search.py
safa/utils/: commit_store.py  commits.py  dates.py  diff_summary.py  diffs.py  fs.py  git_helpers.py  llm_manager.py  menu.py  page_menu.py  printers.py
safa_cmd/: config.py  runner.py
safa_cmd/data/: file_change.py
safa_cmd/safa/: safa_client.py  safa_store.py
safa_cmd/tools/: committer.py  configure.py  projects.py  search.py
safa_cmd/utils/: fs.py  menu.py  printers.py
src/commit_fixer/: config.py  fixer.py  generate.py  llm_manager.py
src/safa_cmd/: config.py  constants.py  runner.py
tests/: mocker.py  test_auth.py  test_create_project.py  test_get_projects.py  test_get_version.py
tests/infra/: constants.py  file_instruction.py  file_statement.py  live_test_controller.py  live_test_state.py  parse.py  repo_factory.py
tests/live/: live_test.py  project_config  project_delete  (+3 more)
(+41 files in other folders)
